World ids and Map ids as Long